--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Power Rangers</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/bf2572e12f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -75,7 +76,7 @@
                 </div>
             </article>
             <article class="container">
-                <div class="video-apps">
+                <div class="video">
                     <div class="single-discover">
                         <img src="images/discover.png" alt="">
                     </div>
@@ -84,8 +85,54 @@
                         <a href="https://powerrangers.hasbro.com/en-us/tv-shows" class="discover-btn">Discover Now</a>
                     </div>
                 </div>
+                <div class="products">
+                    <div class="discover-single">
+                        <img src="images/toy1.png" alt="">
+                    </div>
+                    <div class="single-discover">
+                        <h1>DISCOVER ALL PRODUCTS TODAY</h1>
+                        <a href="https://powerrangers.hasbro.com/en-us/toys-games/" class="discover-btn">Discover Now</a>
+                    </div>
+                </div>
+                <div class="app">
+                    <div class="single-discover">
+                        <img src="images/app.png" alt="">
+                    </div>
+                    <div class="single-discover">
+                        <h1>CONTINUE WITH POWER RANGERS APPS AND GAMES</h1>
+                        <a href="https://powerrangers.hasbro.com/en-us/apps" class="discover-btn">Discover Now</a>
+                    </div>
+                </div>
             </article>
-            
+            <footer>
+                <div class="container">
+                    <div class="footer-parts">
+                        <div class="footer-left">
+                            <input type="text" placeholder="Enter Your Email">
+                            <i class="fas fa-paper-plane"></i>
+                            <p>Join with over 150k+ peoples in Newsletter. By clicking sign up, your define that you have read our privacy policy and want to get regular emails of our latest newsletter posts.</p>
+                        </div>
+                        <div class="footer-middle">
+                            <img src="images/follow.png" alt="">
+                            <div class="social-icon">
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-youtube"></i>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                        </div>
+                        <div class="footer-right">
+                            <h1>Address:</h1>
+                                <h4><i class="fas fa-envelope-open-text pr-3"></i>Email:</h4>
+                                <p>aksaad.cnj@gmail.com</p>
+                                <h4><i class="fas fa-mobile-alt pr-3"></i>Phone:</h4>
+                                <p>01711062838</p>
+                        </div>
+                    </div>
+                    
+                </div>
+                    <p class="copy-right">&copy; All Rights Reserved || A-K-Saad || 2021</p>
+            </footer>
     </div>
 </body>
 </html>
