Adding-Social-Link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Afjalul Karim Saad - Editor-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -115,10 +116,10 @@
                         <div class="footer-middle">
                             <img src="images/follow.png" alt="">
                             <div class="social-icon">
-                                <i class="fab fa-facebook"></i>
-                                <i class="fab fa-linkedin"></i>
-                                <i class="fab fa-youtube"></i>
-                                <i class="fab fa-twitter"></i>
+                                <a href="https://www.facebook.com/afjalulkarimsaad/"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.linkedin.com/in/afjalul-karim-saad-0208ba216/"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://www.youtube.com/user/prsamuraicast"><i class="fab fa-youtube"></i></a>
+                                <a href=""><i class="fab fa-twitter"></i></a>
                             </div>
                         </div>
                         <div class="footer-right">
