Image-Size-Correction

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                 <div class="container">
                     <div class="footer-parts">
                         <div class="footer-left">
-                            <input type="text" placeholder="Enter Your Email">
-                            <i class="fas fa-paper-plane"></i>
+                            <form action="">
+                                <input type="text" placeholder="Enter Your Email">
+                                <i class="fas fa-paper-plane"></i>
+                            </form>
                             <p>Join with over 150k+ peoples in Newsletter. By clicking sign up, your define that you have read our privacy policy and want to get regular emails of our latest newsletter posts.</p>
                         </div>
                         <div class="footer-middle">
